[package]
name = "inkjsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sandbox = "0.1.6"
serde_json = "*"
serde = {version = "*", features = ["derive"]}

[build-dependencies]
reqwest = {version = "*", features = ["blocking"]}

[dev-dependencies]
reqwest = {version = "*", features = ["blocking"]}
rand = "*"